src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_2.snap
---
source: src/parser/test.rs
description: let x;
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '=' not found."), (0,5)->(0,6)),
]

===================================

let x;
     ^ SyntaxError: Expected '=' not found.
